force-app/main/default/objects/Contact/fields/Attendance_Count__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Count__c</fullName>
    <description>Total number of attendances across all Programs</description>
    <inlineHelpText>Total number of attendances across all Programs</inlineHelpText>
    <label>Attendance Count</label>
    <summaryForeignKey>Program_Attendance__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>