force-app/main/default/objects/Contact/fields/Barcode__c.field-meta.xml
<CustomField>
    <fullName>Barcode__c</fullName>
    <description>Enter bar code by placing mouse in this field and then scanning a bar code.  Used to record attendance by scanning on the program session page.</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter bar code by placing mouse in this field and then scanning a bar code.  Used to record attendance by scanning on the program session page.</inlineHelpText>
    <label>Barcode</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>