force-app/main/default/objects/Contact/fields/First_Attendance__c.field-meta.xml
<CustomField>
    <fullName>First_Attendance__c</fullName>
    <description>Date of first attendance (includes all Programs attended)</description>
    <inlineHelpText>Date of first attendance (includes all Programs attended)</inlineHelpText>
    <label>First Attendance</label>
    <summarizedField>Program_Attendance__c.ServiceDate__c</summarizedField>
    <summaryForeignKey>Program_Attendance__c.Contact__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>