force-app/main/default/objects/Contact/fields/Last_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Last_Attendance__c</fullName>
    <description>Date of most recent attendance (includes all Programs)</description>
    <inlineHelpText>Date of most recent attendance (includes all Programs)</inlineHelpText>
    <label>Last Attendance</label>
    <summarizedField>Program_Attendance__c.ServiceDate__c</summarizedField>
    <summaryForeignKey>Program_Attendance__c.Contact__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>