force-app/main/default/objects/Contact/fields/YearOfBirth__c.field-meta.xml
<CustomField>
    <fullName>YearOfBirth__c</fullName>
    <formula>TEXT(YEAR( Birthdate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Of Birth</label>
    <type>Text</type>
</CustomField>